<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:paddingLeft="@dimen/_24sdp"
    android:paddingRight="@dimen/_24sdp"
    android:background="@color/primary_text"
    android:scrollbars="none">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:layout_marginTop="@dimen/_40sdp"
            android:src="@drawable/logo"
            android:layout_width="@dimen/_112sdp"
            android:layout_height="@dimen/_112sdp"/>

        <TextView
            android:textStyle="bold"
            android:textSize="@dimen/_18ssp"
            android:textColor="@color/primary"
            android:text="@string/get_again_password"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textAlignment="center"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/primary"
            android:text="@string/your_identity_has_been_verified_n_set_your_new_password"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_input_no_border"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:passwordToggleEnabled="true"
            app:hintEnabled="true"
            app:passwordToggleDrawable="@drawable/icon_eye_selector"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/background_input_no_border"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:passwordToggleEnabled="true"
            app:hintEnabled="true"
            app:passwordToggleDrawable="@drawable/icon_eye_selector"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/inputConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/background_input_no_border"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <FrameLayout
            android:animateLayoutChanges="true"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonReset"
                android:background="@drawable/background_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_44sdp"
                android:text="@string/confirm"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_20sdp"/>
            <ProgressBar
                android:id="@+id/progressBar"
                android:visibility="invisible"
                android:layout_gravity="center"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                tools:ignore="InvalidId" />
        </FrameLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginRight="@dimen/_8sdp"
                android:id="@+id/textGoBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goback"
                android:textColor="@color/primary"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"/>
            <TextView
                android:layout_marginLeft="@dimen/_8sdp"
                android:id="@+id/textSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/primary"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>