<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:background="#000000"
    android:scrollbars="none"
    tools:context=".activities.SignInActivity">
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginTop="@dimen/_40sdp"
            android:src="@drawable/logo"
            android:layout_width="@dimen/_112sdp"
            android:layout_height="@dimen/_112sdp"/>
        <TextView
            android:textStyle="bold"
            android:textSize="@dimen/_18ssp"
            android:textColor="#FFDAB9"
            android:text="@string/welcome_back"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_36sdp"
            android:background="@drawable/background_input_no_border"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textSize="@dimen/_13ssp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:hintEnabled="true">
            <EditText
                android:background="@drawable/background_input_no_border"
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textSize="@dimen/_13ssp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:checked="true"
                android:buttonTint="#FFDAB9"
                android:id="@+id/rememberMe"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
            <TextView
                android:textSize="16sp"
                android:textStyle="normal"
                android:textColor="#FFDAB9"
                android:text="@string/remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:animateLayoutChanges="true">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSigIn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_44sdp"
                android:text="@string/sign_in"
                android:background="#FFDAB9"
                android:textColor="#000000"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_20sdp"/>
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_gravity="center"
                android:visibility="invisible"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"/>
        </FrameLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginRight="@dimen/_8sdp"
                android:id="@+id/textResetAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resetpassword"
                android:textColor="#FFDAB9"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"/>
            <TextView
                android:layout_marginLeft="@dimen/_8sdp"
                android:id="@+id/textCreateNewAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_new_account"
                android:textColor="#FFDAB9"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>